c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/union_wrong_member.c
union u {
    int a;
};

int main(void) {
    union u foo = {1};

    // introduce a different union u type
    union u {
        int b;
    };

    return foo.b; // foo belongs to outer union u type, which doesn't have member 'b'
}